# o

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml  tests.yml
cmake/: OpenCogFunctions.cmake
co9as-atomspace/: CLAUDE.md
co9as-atomspace/opencog/atoms/: CMakeLists.txt
co9as-atomspace/opencog/atoms/aten/: ATenSpace.cc  ATenValue.cc
co9as-atomspace/tests/atoms/aten/: CMakeLists.txt
examples/: CMakeLists.txt
lib/: CMakeLists.txt
opencog/: CMakeLists.txt
opencog/atoms/aten/: ATenSpace.cc  ATenSpace.h  ATenValue.cc  ATenValue.h  CMakeLists.txt  TensorEquation.cc  TensorEquation.h  TensorLink.cc  TensorLink.h  TensorLogic.cc  TensorLogic.h  TensorLogicLinks.cc  TensorLogicLinks.h
opencog/atoms/atom_types/: atom_types.script
opencog/atoms/free/: FindUtils.cc
opencog/atomspace/: CMakeLists.txt
opencog/cogserver/: CMakeLists.txt
opencog/cogserver/python/: CMakeLists.txt
opencog/cogserver/scm/: cogserver.scm
opencog/cogserver/server/: CMakeLists.txt
opencog/cogserver/shell/: CMakeLists.txt
opencog/cython/: CMakeLists.txt
opencog/network/: CMakeLists.txt
opencog/persist/: CMakeLists.txt
opencog/persist/monospace/: CMakeLists.txt
opencog/persist/rocks/: CMakeLists.txt
opencog/persist/rocks-types/: CMakeLists.txt
opencog/util/: tensor.h
scripts/: README.md  combine_lcov.sh
tests/: CMakeLists.txt
tests/atoms/: CMakeLists.txt
tests/atoms/aten/: ATenUTest.cxxtest  CMakeLists.txt  TensorLogicUTest.cxxtest
tests/atoms/atom_types/: CMakeLists.txt
tests/atoms/base/: CMakeLists.txt
tests/atoms/constrain/: CMakeLists.txt  ConstrainUTest.cxxtest
tests/atoms/core/: CMakeLists.txt
tests/atoms/evaluation/: CMakeLists.txt
tests/atoms/execution/: CMakeLists.txt
tests/atoms/flow/: CMakeLists.txt
tests/atoms/free/: CMakeLists.txt  FreeUTest.cxxtest
tests/atoms/grant/: CMakeLists.txt
tests/atoms/grounded/: CMakeLists.txt
tests/atoms/join/: CMakeLists.txt
tests/atoms/parallel/: CMakeLists.txt
tests/atoms/pattern/: CMakeLists.txt
tests/atoms/reduct/: CMakeLists.txt
tests/atoms/scope/: CMakeLists.txt
tests/atoms/signature/: CMakeLists.txt
tests/atoms/type-system/apps/: CMakeLists.txt
tests/atoms/value/: CMakeLists.txt
tests/atomspace/: AtomTableUTest.cxxtest  CMakeLists.txt
tests/cython/: CMakeLists.txt
tests/http/: CMakeLists.txt
tests/persist/: CMakeLists.txt
tests/persist/api/: CMakeLists.txt  StorageAPIUTest.cxxtest
tests/persist/prolog/: CMakeLists.txt  PrologUTest.cxxtest
tests/persist/sexcom/: CMakeLists.txt  SexprEvalUTest.cxxtest
tests/proxy/: CMakeLists.txt
tests/query/: CMakeLists.txt  test-types.cc  test-types.h
tests/scm/: CMakeLists.txt
tests/shell/: CMakeLists.txt
tests/util/: CMakeLists.txt  ConcurrentQueueUTest.cxxtest  ExceptionUTest.cxxtest  PoolUTest.cxxtest  TensorUTest.cxxtest
