INCLUDE(AddCxxtest)

# Include directories for tests
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})

# Perform tests in component-dependency order, as much as possible.
IF (CXXTEST_FOUND)

	IF (HAVE_CYTHON)
		ADD_SUBDIRECTORY (cython)
	ENDIF (HAVE_CYTHON)
	IF (HAVE_MCP)
		ADD_SUBDIRECTORY (mcp)
	ENDIF (HAVE_MCP)
	ADD_SUBDIRECTORY (util)
	ADD_SUBDIRECTORY (atoms)
	ADD_SUBDIRECTORY (atomspace)
	ADD_SUBDIRECTORY (query)
	ADD_SUBDIRECTORY (persist)
	ADD_SUBDIRECTORY (http)
	ADD_SUBDIRECTORY (proxy)
	ADD_SUBDIRECTORY (shell)
	ADD_SUBDIRECTORY (scm)

ENDIF (CXXTEST_FOUND)
