
CONFIGURE_FILE(
	"${CMAKE_CURRENT_SOURCE_DIR}/version.h.in"
	"${CMAKE_CURRENT_BINARY_DIR}/version.h"
)

# Make the generated header available to all cogserver sub-targets.
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

ADD_SUBDIRECTORY (types)
ADD_SUBDIRECTORY (server)
ADD_SUBDIRECTORY (atoms)
ADD_SUBDIRECTORY (scm)
ADD_SUBDIRECTORY (modules)
ADD_SUBDIRECTORY (shell)
ADD_SUBDIRECTORY (python)

IF (HAVE_MCP)
	ADD_SUBDIRECTORY (mcp-docs)
	ADD_SUBDIRECTORY (mcp-eval)
	ADD_SUBDIRECTORY (mcp-tools)
ENDIF (HAVE_MCP)

# ATen/PyTorch tensor support
IF (HAVE_ATEN)
	ADD_SUBDIRECTORY (aten)
ENDIF (HAVE_ATEN)
