# Unified Cython CMakeLists.txt
# Merged from atomspace and atomspace-rocks

#
# Need to use -fno-strict-aliasing when compiling cython code, in order
# to avoid nasty compiler warnings about aliasing.  Cython explicitly
# performs aliasing, in order to emulate python object inheritance.
# See, for example, https://groups.google.com/forum/#!topic/cython-users/JV1-KvIUeIg
#
# Also suppress unused function warnings for static functions, since
# Cython generates a static function that it puts in a header which
# causes this warning to appear whenever anyone includes the header
# and doesn't use all the functions.
#
SET(CMAKE_CXX_FLAGS
	"${CMAKE_CXX_FLAGS} -fno-strict-aliasing -Wno-unused-function")

# Only build Cython bindings if Cython is available
IF (CYTHON_FOUND)
    ADD_SUBDIRECTORY (opencog)
ENDIF (CYTHON_FOUND)

# The rest of the file requires Python development libraries
IF (HAVE_PY_LIBS)

INCLUDE_DIRECTORIES(
	${Python3_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
)

# Python Module init
FILE(MAKE_DIRECTORY opencog)
FILE(COPY opencog/__init__.py DESTINATION opencog)
FILE(COPY opencog/utilities.py DESTINATION opencog)
FILE(COPY opencog/type_constructors.py DESTINATION opencog)

# PythonEval is built even without Cython, but depends on atomspace_cython
# when Cython is available
IF (CYTHON_FOUND)
ADD_LIBRARY(PythonEval
	PythonError.cc
	PythonEval.cc
	PythonLoader.cc
)

ADD_DEPENDENCIES(PythonEval py_atomspace_header atomspace_cython)

TARGET_LINK_LIBRARIES(PythonEval
	pattern
	execution
	atomflow
	atombase
	atomspace
	framestack
	${Python3_LIBRARIES}
)

# We need to get the name of the actual python library in order
# to give it to dlopen() to open and load it. Right now,
# Python3_LIBRARIES is set to just one library, grant total.
# If there are ever more than one, this will break.
GET_FILENAME_COMPONENT(PYLIBNAME ${Python3_LIBRARIES} NAME)
TARGET_COMPILE_DEFINITIONS(PythonEval PRIVATE PYLIBNAME="${PYLIBNAME}")

INSTALL (TARGETS PythonEval EXPORT AtomSpaceTargets DESTINATION "${CMAKE_INSTALL_LIBDIR}/opencog")

INSTALL (FILES
	PythonEval.h
	PyIncludeWrapper.h
	DESTINATION "include/opencog/cython"
)

# ----------------------------------------------------------------
# The scheme wrapper for PythonEval. Allows python snippets to be
# called from scheme.
#
IF(HAVE_GUILE)
	ADD_DEFINITIONS(-DPYTHON_ROOT="${PYTHON_ROOT}")
	ADD_LIBRARY(PythonSCM
		PythonSCM.cc
	)
	ADD_DEPENDENCIES(PythonSCM PythonEval)
	TARGET_LINK_LIBRARIES(PythonSCM
		PythonEval
		smob
	)
	ADD_GUILE_EXTENSION(SCM_CONFIG PythonSCM "opencog-ext-path-python-scm")
	ADD_GUILE_MODULE (FILES
		opencog/python.scm
		DEPENDS PythonSCM
		COMPILE
	)
	INSTALL (TARGETS PythonSCM
		EXPORT AtomSpaceTargets
		DESTINATION "${CMAKE_INSTALL_LIBDIR}/opencog"
	)
ENDIF(HAVE_GUILE)

ENDIF (CYTHON_FOUND)

# ============================================================
# AtomSpace Rocks Cython bindings
# ============================================================
IF (HAVE_ROCKSDB AND CYTHON_FOUND)

SET(CYTHON_FLAGS "-3" "-f" "-Wextra")

# The python module name is taken from the pyx filename. Thus, the file
# storage_rocks.pyx means that module name will be
# 'opencog.storage_rocks'. This will have an autogenerated
# PyInit_storage_rocks() in it, again, based on the module name.
# The storage_rocks.pyx includes persist_rocks_types.pyx, which is
# auto-generated, and so must be built first.
CYTHON_ADD_MODULE_PYX(storage_rocks
	persist_rocks_atom_types
)

ADD_LIBRARY(storage_rocks_cython SHARED
	storage_rocks.cpp
)

ADD_DEPENDENCIES(storage_rocks_cython persist_rocks_atom_types)

TARGET_LINK_LIBRARIES(storage_rocks_cython
	${NO_AS_NEEDED}
	persist-rocks
	persist-monospace
	${AS_NEEDED}
	storage-types
	atomspace
	${Python3_LIBRARIES}
)

SET_TARGET_PROPERTIES(storage_rocks_cython PROPERTIES
	PREFIX ""
	OUTPUT_NAME storage_rocks)

### install the modules ###
INSTALL(TARGETS
	storage_rocks_cython
	DESTINATION "${PYTHON_DEST}")

ENDIF (HAVE_ROCKSDB AND CYTHON_FOUND)

ENDIF (HAVE_PY_LIBS)
